force-app/main/default/objects/Release_Reports__c/Release_Reports__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Release Reports</label>
</CustomObject>