force-app/main/default/objects/Release_Reports__c/fields/Release_Burnup_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Release_Burnup_Report_ID__c</fullName>
    <label>Release Burnup Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>