force-app/main/default/objects/Release_Reports__c/fields/Release_Progress_by_Theme__c.field-meta.xml
<CustomField>
    <fullName>Release_Progress_by_Theme__c</fullName>
    <label>Release Progress by Theme</label>
    <length>18</length>
    <type>Text</type>
</CustomField>