force-app/main/default/objects/Release_Reports__c/fields/Sprint_Completed_Points_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Completed_Points_Report_ID__c</fullName>
    <label>Sprint Completed Points Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>