force-app/main/default/objects/Release_Reports__c/fields/Stories_in_Release_By_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Stories_in_Release_By_Sprint__c</fullName>
    <label>Stories in Release By Sprint</label>
    <length>18</length>
    <type>Text</type>
</CustomField>