force-app/main/default/objects/Release_Reports__c/fields/Stories_In_Release_By_Theme__c.field-meta.xml
<CustomField>
    <fullName>Stories_In_Release_By_Theme__c</fullName>
    <label>Stories In Release By Theme</label>
    <length>18</length>
    <type>Text</type>
</CustomField>